--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Test 123</p>
+<h1>Hello</h1>
+<p>This website is a WIP :)</p>
 </body>
 </html>
