Added head to index.html Added images folder

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+
+    <!-- Stuff -->
+    <meta charset="utf-8" />
+    <title>Evin Bour-GIlson</title>
+    <meta name="description" content="Evin Bour-Gilson" />
+    <meta name="author" content="Evin Bour-Gilson" />
+    <link rel="icon" href="./images/Logo.png">
+
+    <!-- For mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+</head>
+
 <body>
-<h1>Hello</h1>
-<p>This website is a WIP :)
-    Test
-</p>
+    <h1>Hello</h1>
+    <p>This website is a WIP :)</p>
 </body>
+
 </html>
