Added embedded info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <meta name="author" content="Evin Bour-Gilson" />
     <link rel="icon" href="./images/Logo.png">
 
+    <!-- Embedded info -->
+    <meta content="Evin Bour-Gilson" property="og:title" />
+    <meta content="Hi! I'm Evin Bour-Gilson, and this is my website" property="og:description" />
+    <meta content="https://evinbg.com/" property="og:url" />
+    <meta content="./images/Logo.png" property="og:image" />
+    <meta content="#F8E9A1" data-react-helmet="true" name="theme-color" />
+
     <!-- For mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
