Fixed embedded info

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="icon" href="./images/Logo.png">
 
     <!-- Embedded info -->
-    <meta content="Evin Bour-Gilson" property="og:title" />
-    <meta content="Hi! I'm Evin Bour-Gilson, and this is my website" property="og:description" />
-    <meta content="https://evinbg.com/" property="og:url" />
-    <meta content="./images/Logo.png" property="og:image" />
-    <meta content="#F8E9A1" data-react-helmet="true" name="theme-color" />
+    <meta property="og:title" content="Evin Bour-Gilson" />
+    <meta property="og:description" content="Hi! I'm Evin Bour-Gilson, and this is my website" />
+    <meta property="og:url" content="https://evinbg.com/" />
+    <meta property="og:image" content="https://github.com/evinbg/evinbg.github.io/blob/main/images/Logo.png" />
+    <meta name="theme-color" data-react-helmet="true" content="#F8E9A1" />
 
     <!-- For mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
