--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Evin Bour-GIlson</title>
     <meta name="description" content="Evin Bour-Gilson" />
     <meta name="author" content="Evin Bour-Gilson" />
-    <link rel="icon" href="./images/Logo.png">
+    <link rel="icon" href="./images/Logo 4.png">
 
     <!-- Embedded info -->
     <meta property="og:title" content="Evin Bour-Gilson" />
@@ -23,8 +23,11 @@
 </head>
 
 <body>
+
     <h1>Hello</h1>
+
     <p>This website is a WIP :)</p>
+
 </body>
 
 </html>
