--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
 
     <!-- Embedded info -->
     <meta property="og:title" content="Evin Bour-Gilson" />
-    <meta property="og:description" content="Hi! I'm Evin Bour-Gilson, and this is my website" />
+    <meta property="og:description" content="Hi! I'm Evin Bour-Gilson, and this is my website :)" />
     <meta property="og:url" content="https://evinbg.com/" />
     <meta property="og:image" content="https://github.com/evinbg/evinbg.github.io/blob/main/images/Logo.png" />
     <meta name="theme-color" data-react-helmet="true" content="#F8E9A1" />
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
 
     <!-- For mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
