--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Evin Bour-Gilson" />
     <meta property="og:description" content="Hi! I'm Evin Bour-Gilson, and this is my website :)" />
     <meta property="og:url" content="https://evinbg.com/" />
-    <meta property="og:image" content="https://github.com/evinbg/evinbg.github.io/blob/main/images/Logo.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/evinbg/evinbg.github.io/main/images/Logo%204.png" />
     <meta name="theme-color" data-react-helmet="true" content="#F8E9A1" />
 
     <!-- CSS -->
@@ -22,9 +22,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 
     <!-- For mobile -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
 
 </head>
 
