changed logo files

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <title>Evin Bour-GIlson</title>
     <meta name="description" content="Evin Bour-Gilson" />
     <meta name="author" content="Evin Bour-Gilson" />
-    <link rel="icon" href="./images/Logo 4.png">
+    <link rel="icon" href="./images/Logo.png">
 
     <!-- Embedded info -->
     <meta property="og:title" content="Evin Bour-Gilson" />
     <meta property="og:description" content="Hi! I'm Evin Bour-Gilson, and this is my website :)" />
     <meta property="og:url" content="https://evinbg.com/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/evinbg/evinbg.github.io/main/images/Logo%204.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/evinbg/evinbg.github.io/main/images/Logo.png" />
     <meta name="theme-color" data-react-helmet="true" content="#F8E9A1" />
 
     <!-- CSS -->
